unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Delivered_Status__c.field-meta.xml
<CustomField>
    <fullName>psa_Delivered_Status__c</fullName>
    <label>Delivered Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>