unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Forthcoming_Activities__c.field-meta.xml
<CustomField>
    <fullName>psa_Forthcoming_Activities__c</fullName>
    <label>Forthcoming Activities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>