unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Project__c.field-meta.xml
<CustomField>
    <fullName>psa_Project__c</fullName>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Statuses</relationshipLabel>
    <relationshipName>Project_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>