unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Project_Schedule__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Schedule__c</fullName>
    <label>Project Schedule</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>