unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Project_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Status_Date__c</fullName>
    <label>Project Status Date</label>
    <type>Date</type>
</CustomField>