unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Project_Status_Narrative__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Status_Narrative__c</fullName>
    <label>Project Status Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>