unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Resourcing_Status__c.field-meta.xml
<CustomField>
    <fullName>psa_Resourcing_Status__c</fullName>
    <label>Resourcing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG_Status</valueSetName>
    </valueSet>
</CustomField>