unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>psa_Status_Type__c</fullName>
    <label>Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>