unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Trend__c.field-meta.xml
<CustomField>
    <fullName>psa_Trend__c</fullName>
    <label>Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>