unpackaged/main/default/objects/psa_Project_Status__c/fields/psa_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>psa_Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>